	- Deletes need for GeFanuc RFM cards. However, option still remains to use them.
	- Requires 2 separate computers to act as switches between Dolphin fabrics
- Bug Fix (472): Better framewriter error messages
- Bug Fix (985): Fix daqd for single-machine framebuilder in kernel 3.2
- Bug Fix (1010): Prevent divide-by-zero error in daqd filesys.hh
==================================================================================================
Changes for 3.0.2
==================================================================================================
- Bug Fix to SUM.pm part connection checking.
- Bug Fix to auto-generated ADC monitor screens. Screens for models which use several top level
  signal names were not being generated correctly.
==================================================================================================
Changes for 3.0.1
==================================================================================================
- Bug Fix (957): Phase locked oscillator 
- Bug Fix (1005): GPS part: GPS second being sent to user code 1 cycle late.
- Bug Fix (832): Dataviewer -r <restorefile> command line option fixed.
- Bug Fix (999): start script does not error out if real-time model killed 
- Bug Fix (1000): ccodeio.h now uses environment variables in file paths
==================================================================================================
Changes for 3.0
==================================================================================================
- New Decimation filters for IOP to 16K as per T1600066.
- Bug Fix (973): HWWD.pm part updated to reflect new status bit pattern from updated SUS HWWD
	chassis.
- Bug Fix (895): Attempting to clean up compile, with better error messages with user direction
  to error files:
	- Added checkInputConnect() function to all library parts in src/epics/utils/lib.` This
	  was done to allow for checking of connections prior to going into the code linking