@@ -8,6 +8,8 @@ Changes for X.X
 - Bug Fix (472): Better framewriter error messages
 - Bug Fix (985): Fix daqd for single-machine framebuilder in kernel 3.2
 - Bug Fix (1010): Prevent divide-by-zero error in daqd filesys.hh
+- Bug Fix (513): Cleanup debug schemes.  Also created separate udp_rcvr files, fixed mx_rcvr header
+- Bug Fix (1015): Update daqd,nds build for ldas-tools 2.5
 ==================================================================================================
 Changes for 3.0.2
 ==================================================================================================
